tests/integration/traits/errors/duplicate-method/main.cx
trait C {
  x: self
  x: self
}
